refactor: publish publish ig command
Signed-off-by: Kathurima Kimathi <kathurimakimathi415@gmail.com>

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,42 +51,41 @@
 #           echo "IG generation and snapshot creation complete."
           
 #       - name: Publish FHIR Artifacts to HAPI FHIR
+#         env:
+#             HAPI_USERNAME: ${{ secrets.HAPI_USERNAME }}
+#             HAPI_PASSWORD: ${{ secrets.HAPI_PASSWORD }}
 #         run: |
-#           echo "Publishing to server: ${{ env.HAPI_FHIR_BASE_URL }}"
-      
-#           for file in fsh-generated/resources/*.json; do
-#             if [ -f "$file" ]; then
-#               RESOURCE_TYPE=$(jq -r '.resourceType' "$file")
-#               RESOURCE_ID=$(jq -r '.id' "$file")
+#             set -euo pipefail
+#             echo "Publishing to server: ${HAPI_FHIR_BASE_URL}"
 
-#               if [ "$RESOURCE_TYPE" = "StructureDefinition" ] || \
-#                 [ "$RESOURCE_TYPE" = "ConceptMap" ] || \
-#                 [ "$RESOURCE_TYPE" = "ValueSet" ] || \
-#                 [ "$RESOURCE_TYPE" = "CodeSystem" ]; then
-
-#                 echo "Uploading $file with resourceType=$RESOURCE_TYPE, id=$RESOURCE_ID"
-                
-#                 RESPONSE=$(curl -s -X PUT "${HAPI_FHIR_BASE_URL}/${RESOURCE_TYPE}/${RESOURCE_ID}" \
-#                   -H "Content-Type: application/fhir+json" --data-binary "@$file")
-
-#                 echo "Response: $RESPONSE"
-#                 STATUS_CODE=$(echo "$RESPONSE" | jq -r '.issue[0].severity // "unknown"')
-
-#                 if [ "$STATUS_CODE" != "unknown" ]; then
-#                   echo "Upload failed for $file: $STATUS_CODE"
-#                   exit 1
-#                 fi
-
-#                 # Verify the update
-#                 RETRIEVED_RESOURCE=$(curl -s -X GET "${HAPI_FHIR_BASE_URL}/${RESOURCE_TYPE}/${RESOURCE_ID}" -H "Accept: application/fhir+json")
-#                 echo "Retrieved Resource after Upload: $RETRIEVED_RESOURCE"
-
-#               else
-#                 echo "Skipping $file: resourceType $RESOURCE_TYPE is not a conformance resource."
-#               fi
+#             AUTH_OPT=""
+#             if [[ -n "${HAPI_USERNAME:-}" && -n "${HAPI_PASSWORD:-}" ]]; then
+#             AUTH_OPT="--user ${HAPI_USERNAME}:${HAPI_PASSWORD}"
+#             echo "Using HTTP basic auth with provided credentials"
 #             fi
-#           done
 
-      
-#           echo "All conformance resources uploaded successfully."
-      
+#             shopt -s nullglob
+#             for file in fsh-generated/resources/*.json; do
+#             RESOURCE_TYPE=$(jq -r '.resourceType' "$file")
+#             RESOURCE_ID=$(jq -r '.id' "$file")
+
+#             case "$RESOURCE_TYPE" in
+#                 StructureDefinition|ValueSet|CodeSystem)
+#                 echo "Uploading ${file} (Type: ${RESOURCE_TYPE}, ID: ${RESOURCE_ID})"
+#                 STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" \
+#                     ${AUTH_OPT} \
+#                     -X PUT "${HAPI_FHIR_BASE_URL}/${RESOURCE_TYPE}/${RESOURCE_ID}" \
+#                     -H "Content-Type: application/fhir+json" \
+#                     --data-binary @"$file")
+#                 if [[ "$STATUS_CODE" -lt 200 || "$STATUS_CODE" -ge 300 ]]; then
+#                     echo "Error uploading ${file} to ${HAPI_FHIR_BASE_URL} (HTTP ${STATUS_CODE})"
+#                     exit 1
+#                 fi
+#                 ;;
+#                 *)
+#                 echo "Skipping ${file}: ${RESOURCE_TYPE} is not a conformance resource."
+#                 ;;
+#             esac
+#             done
+
+#             echo "All conformance resources uploaded successfully."
