fix: include staging and prod enviroments when publishing ig
Signed-off-by: Kathurima Kimathi <kathurimakimathi415@gmail.com>

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        environment: [testing]
+        environment: [testing, staging, prod]
 
     environment:
       name: ${{ matrix.environment }}
